--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "4.4.3",
+    "vue3-cookies": "1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
+    "vite": "5.4.2"
   }
 }
