--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.3.13",
     "axios": "^1.7.4",
+    "date-fns": "2.30.0",
     "vue": "^3.4.37",
     "vue-router": "4.4.3",
-    "vue3-cookies": "1.0.6"
+    "vue3-cookies": "1.0.6",
+    "vuex": "4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "5.1.4",
     "vite": "^5.4.2"
   }
 }
